[package]
name = "romodoro"
version = "0.4.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>"]
edition = "2018"
description = "Romodoro is a terminal Pomodoro timer."
license = "MIT"
repository = "https://github.com/michaelfletchercgy/romodoro"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
termion = "1.5.1"
ctrlc = "3.1.1"

[profile.release]
lto = true